fix: Spacing above all p elements too large

--- a/src/niall-paterson/partials/_queries.scss
+++ b/src/niall-paterson/partials/_queries.scss
@@ -3,6 +3,10 @@
     margin: $medium-margin;
     width: $medium-width;
   }
+
+  p {
+    margin-top: 0;
+  }  
   
   #fixed-header {
     div {
